--- a/docs/css/03_component.css
+++ b/docs/css/03_component.css
@@ -214,6 +214,7 @@ the compromised solution is to hit extra 2 arrow keys
     width: 100%;
     height: 100%;
     background-color: red;
+    cursor: pointer;
 }
 
 .cp_dropdown_pop {
@@ -303,3 +304,35 @@ input:first-child:checked ~ .cp_dropdown_pop label input {
 .cp_link:is(:hover, :focus, :focus-within) {
     color: var(--nv-green-hover);
 }
+
+/*==================== scroll bar style =====================*/
+ .cp_scrollbar::-webkit-scrollbar {
+        display: initial;
+        width: 4px;
+        height: 4px;
+    }
+    .cp_scrollbar::-webkit-scrollbar-track {
+        background-color: var(--sw-14);
+        background: transparent;
+/*        background: white;*/
+        border-radius: 99999px;
+}
+        .cp_scrollbar::-webkit-scrollbar-track-piece {
+/*    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+}
+    .cp_scrollbar::-webkit-scrollbar-thumb {
+        background-color: var(--sw-6);
+        background-color: var(--nv-green);
+        border-radius: 99999px;
+    }
+    .cp_scrollbar::-webkit-scrollbar:vertical {
+/*        display: none;*/
+    }
+    .cp_scrollbar::-webkit-scrollbar-button {
+        display: none;
+    }
+    .cp_scrollbar::-webkit-scrollbar-corner {
+/*        width: 40px;*/
+/*        display: none;*/
+/*        background-color: red;*/
+    }
