--- a/docs/12_gallery/css/gallery.css
+++ b/docs/12_gallery/css/gallery.css
@@ -2,6 +2,8 @@
         
         --padding-text: 16px;
         --padding-largetile: 16px;
+        
+        --4-3: 4 / 3;
 
     }
 
@@ -12,6 +14,7 @@
         --grid-col: repeat(2, 1fr);
         --grid-auto-row: 1fr;
         --16-9: 9 / 16;
+        --4-3: unset;
         
         --smalltile-span-column: span 2;
         
@@ -45,6 +48,15 @@
     }
      
 }
+
+
+/*================== type ======================*/
+p {
+    font-size: var(--tp_p-m);
+    line-height: 1.67;
+}
+
+
 
 
 .padding > ul.wrapper {
@@ -265,6 +277,7 @@
 /*    background-color: var(--nv-15-5-f7);*/
     cursor: pointer;
     position: relative;
+    aspect-ratio: var(--4-3);
 }
 
 .cp_smalltile_fbg > div {
@@ -445,3 +458,4 @@
 .cp_smalltile_fbg.span:hover > .precisecrop img {
     transform-origin: 71.3% 50%;
 }
+
